src/objects/GLXY_LeasePaymentsSnapshot__c.object
<CustomObject>
    <fields>
        <fullName>Acceptance620Date__c</fullName>
        <label>620 to R7 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AnnualAmount__c</fullName>
        <label>Annual Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Obligation_IA__c</fullName>
        <formula>( 
IASqFt__c/ 
IF( 
((IASqFt__c+ NOASqFt__c) &lt;&gt; 0), 
(IASqFt__c+ NOASqFt__c), 
1 
) 
) 

* AnnualAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Obligation IA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Obligation_NOA__c</fullName>
        <formula>If ( ((IASqFt__c+ NOASqFt__c) = 0), 
AnnualAmount__c, 
((NOASqFt__c/(IASqFt__c+ NOASqFt__c)) * AnnualAmount__c) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Obligation NOA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BudgetExclusionReason__c</fullName>
        <label>Budget Exclusion Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EffectiveDateFY__c</fullName>
        <formula>Text(YEAR( EffectiveDate__c + 92 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Date FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FYObligationIA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FY Obligation IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FYObligationNOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FY Obligation NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FYObligation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FY Obligation</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IASqFt__c</fullName>
        <label>IA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IncludeinBudgetFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Budget Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeaseNumber__c</fullName>
        <formula>ParentRecord__r.LeaseNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOASqFt__c</fullName>
        <label>NOA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentRecord__c</fullName>
        <label>Parent Record</label>
        <referenceTo>Glxy_LeaseSnapshot__c</referenceTo>
        <relationshipName>Lease_Payments_Snapshot</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PastDueIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Applicable to CPI&apos;s only ...</inlineHelpText>
        <label>Past Due Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PaymentDescription__c</fullName>
        <description>Applicable to Step Rents only ...</description>
        <label>Payment Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Broker Commission Credit</fullName>
                </value>
                <value>
                    <fullName>Buyout</fullName>
                </value>
                <value>
                    <fullName>Catch Up Payment</fullName>
                </value>
                <value>
                    <fullName>Claim</fullName>
                </value>
                <value>
                    <fullName>Condemnation</fullName>
                </value>
                <value>
                    <fullName>Debits &amp; Credits</fullName>
                </value>
                <value>
                    <fullName>Escalation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Overtime Services</fullName>
                </value>
                <value>
                    <fullName>Paragraph 15</fullName>
                </value>
                <value>
                    <fullName>Recovery Act</fullName>
                </value>
                <value>
                    <fullName>Release</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>Rent Free Period</fullName>
                </value>
                <value>
                    <fullName>Step Rent Decrease</fullName>
                </value>
                <value>
                    <fullName>Step Rent Increase</fullName>
                </value>
                <value>
                    <fullName>Suspension</fullName>
                </value>
                <value>
                    <fullName>Tax Escalation</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PaymentID__c</fullName>
        <label>Payment ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentType__c</fullName>
        <label>Payment Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Category__c</fullName>
        <label>Payment Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer Price Index</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Lump Sum</fullName>
                </value>
                <value>
                    <fullName>Step Rent</fullName>
                </value>
                <value>
                    <fullName>IBAA</fullName>
                </value>
                <value>
                    <fullName>RWA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProcessDate__c</fullName>
        <label>Process Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProcessedDateFY__c</fullName>
        <formula>Text(YEAR(ProcessDate__c + 92 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Date FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Record__c</fullName>
        <label>Source Record</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <label>Status Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actual</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Estimate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lease Payments for Snapshot</label>
    <nameField>
        <displayFormat>LPH-{0000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease Payments for Snapshot</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>